@@ -1642,6 +1642,41 @@ literal|"Cannot use ALTER TABLE on a view"
 argument_list|)
 throw|;
 block|}
+comment|// If the add partition was created with IF NOT EXISTS, then we should
+comment|// not throw an error if the specified part does exist.
+name|Partition
+name|checkPart
+init|=
+name|db
+operator|.
+name|getPartition
+argument_list|(
+name|tbl
+argument_list|,
+name|addPartitionDesc
+operator|.
+name|getPartSpec
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|checkPart
+operator|!=
+literal|null
+operator|&&
+name|addPartitionDesc
+operator|.
+name|getIfNotExists
+argument_list|()
+condition|)
+block|{
+return|return
+literal|0
+return|;
+block|}
 if|if
 condition|(
 name|addPartitionDesc
